# picto

./: .gitignore  AUDIT.md  Cargo.toml  LICENSE  README.md  THIRD_PARTY_LICENSES  detail.html  index.html  library-manager.html  package.json  settings.html  subscriptions.html  tsconfig.json  vite.config.ts  vitest.config.ts
core/: Cargo.toml
core/src/: blob_store.rs  constants.rs  credential_store.rs  duplicate_controller.rs  duplicates.rs  events.rs  flow_controller.rs  folder_controller.rs  grid_controller.rs  import.rs  import_controller.rs  lib.rs  lifecycle_controller.rs  media_protocol.rs  metadata_controller.rs  perf.rs  poison.rs  ptr_client.rs  ptr_controller.rs  ptr_types.rs  rate_limiter.rs  runtime_state.rs  selection_controller.rs  selection_helpers.rs  settings.rs  sidebar_controller.rs  smart_folder_controller.rs  state.rs  subscription_controller.rs  subscription_sync.rs  tag_controller.rs  tags.rs  types.rs  view_prefs_controller.rs
core/src/dispatch/: common.rs  duplicates.rs  files.rs  files_lifecycle.rs  files_media.rs  files_metadata.rs  files_review.rs  folders.rs  grid.rs  mod.rs  ptr.rs  selection.rs  smart_folders.rs  subscriptions.rs  system.rs  tags.rs
core/src/duplicates/: controller.rs  db.rs  mod.rs  phash.rs
core/src/files/: blurhash.rs  colors.rs  image_metadata.rs  mod.rs  pdf.rs  svg.rs
core/src/folders/: collections_db.rs  controller.rs  db.rs  mod.rs
core/src/grid/: controller.rs
core/src/import/: controller.rs  db.rs  mod.rs  pipeline.rs
core/src/lifecycle/: controller.rs
core/src/media_processing/: archive.rs  ffmpeg.rs  ffmpeg_path.rs  gallery_dl_path.rs  mod.rs  office.rs  specialty.rs
core/src/metadata/: controller.rs
core/src/ptr/: client.rs  controller.rs  mod.rs  sync_engine.rs
core/src/runtime_contract/: mod.rs  mutation.rs  snapshot.rs  task.rs
core/src/scope/: mod.rs  resolver.rs
core/src/selection/: controller.rs  helpers.rs  mod.rs
core/src/settings/: controller.rs  db.rs  mod.rs
core/src/sidebar/: controller.rs  db.rs
core/src/smart_folders/: controller.rs  db.rs
core/src/sqlite/: bitmaps.rs  collections.rs  compilers.rs  duplicates.rs  files.rs  flows.rs  folders.rs  (+10 more)
core/tests/: ffmpeg_integration.rs  gallery_dl_integration.rs  orchestration.rs
native/picto-node/: Cargo.toml  index.d.ts  index.js  package.json
(+752 files in other folders)
