[package]
name = "picto_core"
version = "0.1.1-alpha.1"
edition = "2021"

[dependencies]
# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Async runtime
tokio = { version = "1.0", features = ["full"] }
tokio-util = "0.7"

# Image processing
image = "0.25"
fast_image_resize = { version = "5", features = ["image"] }
webp = "0.3"
blurhash = "0.2"
kmeans_colors = { version = "0.7", default-features = false, features = ["palette_color"] }
palette = { version = "0.7", default-features = false, features = ["std"] }
lcms2 = "6.1"

# SVG rendering
resvg = "0.44"
usvg = "0.44"
tiny-skia = "0.11"

# Video/audio processing — uses bundled ffmpeg/ffprobe CLI binaries (see scripts/download-ffmpeg.sh)

# Archive handling
zip = "2"

# XML parsing (EPUB, OOXML, Krita, etc.)
roxmltree = "0.20"

# HTTP client (for PTR sync, subscriptions)
reqwest = { version = "0.12", features = ["json", "cookies"] }
url = "2"

# OS keychain credential storage (macOS Keychain, Windows Credential Manager, Linux Secret Service)
keyring = { version = "3", features = ["apple-native", "windows-native", "sync-secret-service"] }

# Hashing & checksums
sha2 = "0.10"
img_hash = "3.2"

# Utilities
chrono = { version = "0.4", features = ["serde"] }
hex = "0.4"
regex = "1.0"
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
flate2 = "1.0"
tempfile = "3.8"
base64 = "0.22"
rand = "0.8"
open = "5"

# SQLite database engine (WAL mode, FTS5)
rusqlite = { version = "0.31", features = ["bundled"] }

# Roaring bitmaps for fast set operations
roaring = "0.10"

# LRU cache for hash↔file_id mapping
lru = "0.12"

# High-performance locking (no-syscall uncontended, RwLock for concurrent reads)
parking_lot = "0.12"

# CPU count for connection pool sizing
num_cpus = "1.16"

[dev-dependencies]
tokio-test = "0.4"
