[package]
name = "picto_node"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
napi = { version = "2.16", default-features = false, features = ["napi8", "tokio_rt"] }
napi-derive = "2.16"
serde_json = "1.0"
picto_core = { path = "../../core" }

[build-dependencies]
napi-build = "2.1"
